# grokeng

./: .env.example  .gitignore  README.md  docker-compose.yml
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  create_tables.py  pyproject.toml
backend/app/: main.py
backend/app/api/: grok.py  leads.py  messages.py
backend/app/core/: config.py  database.py  database_simple.py  grok_client.py
backend/app/models/: lead.py  message.py
backend/app/services/: grok_service.py
frontend/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx  index.css
frontend/src/components/common/: ErrorAlert.tsx  Pagination.tsx
frontend/src/components/layout/: Header.tsx  Layout.tsx  Sidebar.tsx
frontend/src/components/leads/: AddLeadModal.tsx  AnalysisModal.tsx  LeadRow.tsx  LeadsFilters.tsx  LeadsTable.tsx  MessageModal.tsx
frontend/src/config/: apiConfig.ts
frontend/src/pages/dashboard/: Dashboard.tsx
frontend/src/pages/leads/: LeadsPage.tsx
frontend/src/pages/messages/: MessagesPage.tsx
frontend/src/services/: api.ts  leadService.ts
frontend/src/types/: index.ts
