[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "aiomysql==0.2.0",
    "alembic==1.13.0",
    "email-validator==2.2.0",
    "fastapi==0.112.0",
    "greenlet==3.0.3",
    "httpx==0.27.0",
    "passlib[bcrypt]==1.7.4",
    "pydantic==2.8.0",
    "pydantic-settings==2.4.0",
    "pytest==8.2.0",
    "pytest-asyncio==0.23.0",
    "python-jose[cryptography]==3.3.0",
    "python-multipart==0.0.9",
    "requests>=2.32.3",
    "sqlalchemy==2.0.23",
    "uvicorn[standard]==0.30.0",
]
